--- a/hire.html
+++ b/hire.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/stylesheet.css">
 		<link rel="stylesheet" href="styles/adaptive.css">
+		<link rel="stylesheet" href="styles/swiper.min.css">
+
 	<title>Hebron Academy</title>
 </head>
 <body>
@@ -62,13 +64,13 @@
 		<div class="container">
 			<div class="ten-content">
 				<div class="ten-text">
-					<p>Key numbers:
+					<p>Key numbers:<br><br>
 
-					70240 – the number of registered orphans and children deprived of parental rights in 2017;
+					70240 – the number of registered orphans and children deprived of parental rights in 2017;<br><br>
 
-					4.1% of them are adopted;
+					4.1% of them are adopted;<br><br>
 
-					95.9% is the percentage of children who didn`t have the family and turned out to be unnecessary;
+					95.9% is the percentage of children who didn`t have the family and turned out to be unnecessary;<br><br>
 
 					100% is, as we believe, the percentage of children that can improve their future and become leaders of Ukrainian society.</p>
 				</div>
@@ -233,6 +235,9 @@
 
 		</div>
 	</section>
-	
+
+	    <script src="main.js"></script>
+	    <script src="moduls/swiper.min.js"></script>
+	    
 </body>
 </html>
