--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/stylesheet.css">
 		<link rel="stylesheet" href="styles/adaptive.css">
+		<link rel="stylesheet" href="path/to/swiper.min.css">
+
 	<title>Hebron Academy</title>
 </head>
 <body>
